@@ -49,9 +49,8 @@
   <structure size="large" />
  </slots>
  <stats>
-  <turn_mod>-10</turn_mod>
-  <armour_mod>-40</armour_mod>
-  <shield_mod>40</shield_mod>
+  <armour_mod>-30</armour_mod>
+  <shield_mod>50</shield_mod>
   <shield_regen_mod>30</shield_regen_mod>
   <stress_dissipation>10</stress_dissipation>
   <fbay_reload>50</fbay_reload>
